--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         }
         //https://www.investopedia.com/articles/personal-finance/090815/basics-business-development.asp
     </script>
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <!-- @see: https://zaengle.com/blog/building-an-accessible-nav-with-alpine-js-and-tailwind-css -->
 </head>
-<body class="text-justify text-gray-600">
+<body class="text-justify text-gray-600"
+      x-data="{ isMobileNavOpen: false }">
 <!-- @see: https://tailwindui.com/components/marketing/elements/headers -->
 <header class="relative bg-white">
     <div class="max-w-7xl mx-auto px-4 sm:px-6">
@@ -36,7 +39,9 @@
             <div class="-mr-2 -my-2 md:hidden">
                 <button type="button"
                         id="open-menu"
-                        class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
+                        class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+                        x-on:click.prevent="isMobileNavOpen = !isMobileNavOpen"
+                        x-bind:aria-expanded="isMobileNavOpen">
                     <span class="sr-only">Open menu</span>
                     <!-- Heroicon name: outline/menu -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
@@ -68,7 +73,15 @@
         From: "opacity-100 scale-100"
         To: "opacity-0 scale-95"
     -->
-    <div id="mobile-menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
+    <div id="mobile-menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden"
+         x-show="isMobileNavOpen"
+         @click.away="isMobileNavOpen = false"
+         x-transition:enter="transition ease-linear duration-200 transform"
+         x-transition:enter-start="-translate-y-full"
+         x-transition:enter-end="translate-y-0"
+         x-transition:leave="transition ease-out duration-200 transform"
+         x-transition:leave-start="translate-y-0"
+         x-transition:leave-end="-translate-y-full">
         <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
             <div class="pt-5 pb-6 px-5">
                 <div class="flex items-center justify-between">
@@ -77,7 +90,9 @@
                     </div>
                     <div class="-mr-2">
                         <button type="button" id="close-menu"
-                                class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+                                class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+                                x-on:click.prevent="isMobileNavOpen = !isMobileNavOpen"
+                                x-bind:aria-expanded="isMobileNavOpen">
                             <span class="sr-only">Close menu</span>
                             <!-- Heroicon name: outline/x -->
                             <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
@@ -306,15 +321,5 @@
 <!--====== Particles js ======-->
 <script src="assets/js/particles.min.js"></script>
 <script src="assets/js/main-particles.js"></script>
-<script>
-    const buttonOpenMenu = document.querySelector("button#open-menu");
-    const buttonCloseMenu = document.querySelector("button#close-menu");
-    buttonOpenMenu.addEventListener('click', () => {
-        document.querySelector("div#mobile-menu").style.display = 'block';
-    });
-    buttonCloseMenu.addEventListener('click', () => {
-        document.querySelector("div#mobile-menu").style.display = 'none';
-    });
-</script>
 </body>
 </html>
