--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
                 </button>
             </div>
             <nav class="hidden md:flex space-x-10">
+                <!--
                 <a href="#" class="text-base font-medium border-b-2 border-transparent hover:text-gray-900 hover:border-blue-500 transition-colors duration-200 transform">
                     Activités IT
                 </a>
                 <a href="#" class="text-base font-medium border-b-2 border-transparent hover:text-gray-900 hover:border-blue-500 transition-colors duration-200 transform">
                     Business Development
                 </a>
+                -->
                 <a href="#" class="text-base font-medium border-b-2 border-transparent hover:text-gray-900 hover:border-blue-500 transition-colors duration-200 transform">
                     Contactez-nous
                 </a>
@@ -108,6 +110,7 @@
                                 Activités IT
                             </span>
                         </a>
+                        <!--
                         <a href="#" class="-m-3 p-3 flex items-center rounded-md hover:bg-gray-50">
                             <span class="ml-3 text-base font-medium text-gray-900">
                                 Business Development
@@ -118,6 +121,7 @@
                                 Contactez-nous
                             </span>
                         </a>
+                        -->
                     </nav>
                 </div>
             </div>
@@ -154,11 +158,19 @@
             <div class="lg:max-w-lg">
                 <h2 class="text-2xl font-medium text-emeth tracking-wide lg:text-4xl">À propos</h2>
                 <div class="mt-2">
-                    <p class="mb-2">La grande majorité des PME manquent de temps pour effectuer une prospection commerciale BtoB efficace et former</p>
-                    <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a iaculis purus, eget accumsan arcu. Donec lacinia velit at
-                        ipsum varius, eu eleifend leo blandit. Nullam sit amet fringilla enim. Phasellus tincidunt dapibus orci.</p>
-                    <p>Nulla suscipit efficitur ligula, nec maximus odio blandit eget. Pellentesque ut velit interdum, facilisis eros non, dapibus
-                        sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
+                    <p class="mb-2">
+                        Nous sommes une équipe d’ingénieurs passionnés par le numérique, l’innovation et le challenge. EMETH IT a été créée dans le
+                        souci de répondre aux besoins de nos clients et partenaires, nous nous activons à trouver des solutions, des outils et
+                        services dans le but d’améliorer votre quotidien.
+                    </p>
+                    <h4 class="font-semibold text-emethdark mb-2 uppercase">Un projet en constance évolution !</h4>
+                    <p class="mb-2">
+                        L’aventure a commencé 2 années avant le démarrage du projet. Chacun des co-founders testait et développait un projet
+                        indépendant. En 2020, la crise de la COVID s’est avéré un accélérateur pour conduire ces amoureux du risque à se lancer sous
+                        le statut d’une entreprise.
+                        Depuis lors, EMETH IT à vu le jour et n’a cessé de muter et se développer.
+                    </p>
+
                 </div>
             </div>
         </div>
@@ -179,7 +191,7 @@
                         Qui sommes-nous&nbsp;?
                     </h2>
                     <h3 class="font-semibold text-2xl tracking-wide">
-                        EMETH-IT accompagne ses clients dans leur <span class="text-blue-400">développement</span>.
+                        EMETH IT accompagne ses clients dans leur <span class="text-blue-400">développement</span>.
                     </h3>
                 </div>
             </div>
@@ -205,6 +217,13 @@
                 </div>
             </div>
             <div class="justify-center w-full mt-10 lg:w-1/2 lg:mt-0">
+                <h5 class="font-semibold text-emethdark mb-2 uppercase">Des services adaptés !</h5>
+                <p class="mb-2">
+                    EMETH IT s’identifie comme une PME qui se veut partenaire et acteur des entreprises de tous secteurs confondus. Elle se donne
+                    la mission d’apporter des solutions aux besoins spécifiques de ces donneurs d’ordre : Mise à disposition d’une main d’ouvre
+                    compétente en renfort aux équipes internes pour l’atteinte des objectifs, aide aux développements d’outils, aux services
+                    supports…
+                </p>
                 <h4 class="font-semibold text-emethdark mb-2 uppercase">Nos solutions</h4>
                 <div class="ml-4">
                     <ul class="list-disc">
@@ -285,7 +304,42 @@
 
 <div class="relative mx-auto bg-redline w-[10rem] h-[0.25rem] top-[-0.125rem]"></div>
 
-<footer class="relative bg-blue-50 py-10 lg:py-16 py-16">
+<section class="relative bg-blue-50 py-10 lg:py-16">
+    <div class="container max-w-7xl mx-auto px-4 sm:px-6">
+        <div class="flex flex-wrap">
+            <div class="w-full">
+                <div class="text-left mx-auto mb-10">
+                    <h2 class="font-bold text-3xl tracking-wide text-emeth sm:text-4xl md:text-[40px] text-dark mb-4">
+                        Nos valeurs&nbsp;?
+                    </h2>
+                </div>
+            </div>
+        </div>
+        <div class="flex flex-wrap">
+            <div class="w-full">
+                <p class="mb-2">Plusieurs valeurs définissent l’équipe :</p>
+
+                <h4 class="font-semibold text-xl text-emethdark mb-2">Éthique</h4>
+                <p class="mb-2">
+                    Nous sommes engagés par des relations de confiance réciproques. Nos actes sont posés dans le respect de l’intégrité envers
+                    nous-même, nos clients, nos fournisseurs et partenaires.
+                </p>
+                <h4 class="font-semibold text-xl text-emethdark mb-2">Fraternité</h4>
+                <p class="mb-2">
+                    Parce que le sentiment d’appartenance est une réalité, nous sommes proches des clients et engagés avec eux dans chaque projet.
+                </p>
+                <h4 class="font-semibold text-xl text-emethdark mb-2">Efficacité</h4>
+                <p class="mb-2">
+                    Nous avons le souci du résultat, le respect des délais et de qualité dans l’exécution de nos prestations.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="relative mx-auto bg-redline w-[10rem] h-[0.25rem] top-[-0.125rem]"></div>
+
+<footer class="relative bg-white py-10 lg:py-16 py-16">
     <div class="container max-w-7xl mx-auto px-4 sm:px-6">
         <div class="flex flex-wrap">
             <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4">
@@ -293,7 +347,9 @@
                     <div class="footer-logo mb-3">
                         <img src="assets/images/logos/emethit-logo.svg" alt="EMETHIT LOGO">
                     </div>
+                    <!--
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam excepturi quasi, ipsam voluptatem.</p>
+                    -->
                 </div>
             </div>
             <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4"></div>
