Avoid usage of Tailwind Play CDN

--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title itemprop='name'>EMETHIT · Digital Agency | Business Development | Web Development | Mobile Development</title>
+    <title itemprop='name'>EMETHIT · Agence digitale | Business Development | Dévelopement Web & Mobile</title>
     <link rel="icon" href="assets/images/logos/emethit-logo-short.svg">
     <!--<script src="https://cdn.tailwindcss.com"></script>-->
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        emeth: '#0e9af1',
-                        emethdark: '#045A8F',
-                        redline: '#E12121',
-                    }
-                }
-            }
-        }
-        //https://www.investopedia.com/articles/personal-finance/090815/basics-business-development.asp
-    </script>
+    <link rel="stylesheet" href="./css/main.css"/>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <!-- @see: https://zaengle.com/blog/building-an-accessible-nav-with-alpine-js-and-tailwind-css -->
 </head>
